# pascal-python

./: .gitignore  .pylintrc  Digraph.gv  grammar.txt  parser.py  pyproject.toml  result.gv  scanner.py
modules/: Errors.py  Lexer.py  Tokenizer.py  Tokens.py  Util.py  dfa.py
